# surface

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  action.yml  install.sh  surf.toml
bench/: .gitignore  ABC_CHECKLIST.md  PREREGISTRATION.md  README.md  config.toml  pyproject.toml
bench/results/2026-06-13-pilot-full-matrix/: PROVENANCE.md  raw.jsonl  report-eli5.md  report-summary.md  report.md  run.json  summary.json
bench/scenarios/: CHECKLIST.md
bench/scenarios/access-invert-qa/: hub_fresh.md  hub_stale.md  meta.toml  surf_report.json  task.md
bench/scenarios/cascade-access-policy-code/: hub_fresh.md  hub_stale.md  meta.toml  surf_report.json  task.md
bench/scenarios/cascade-backoff-offbyone-code/: hub_fresh.md  hub_stale.md  meta.toml  surf_report.json  task.md
bench/scenarios/cascade-default-timeout-ts-code/: hub_fresh.md  hub_stale.md  meta.toml  surf_report.json  task.md
bench/scenarios/cascade-page-size-ts-code/: task.md  (+4 more)
bench/surface_bench/: __init__.py  agent.py  grade_code.py  grade_qa.py  metrics.py  models.py  oracle.py  prompts.py  report.py  run.py  scenarios.py  tools_runtime.py
bench/tests/: test_agent.py  test_anthropic_adapter.py  test_phase6.py  test_run_multi.py  test_scenarios.py  test_tools_runtime.py
bench/tools/: author.py  validate_scenario.py
surf-cli/: Cargo.toml
surf-cli/src/: check.rs  for_path.rs  format.rs  git.rs  init.rs  lint.rs  main.rs  new.rs  stats.rs  suggest.rs  verify.rs  workspace.rs
surf-cli/tests/: cli.rs
(+297 files in other folders)
