[workspace]
members = ["surf-core", "surf-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Connorrmcd6/surface"
rust-version = "1.96"

[workspace.dependencies]
surf-core = { path = "surf-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
