[project]
name = "surface-bench"
version = "0.1.0"
description = "Empirically measuring how documentation accuracy affects agent task performance"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["surface_bench*"]
