[package]
name = "surf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "surf"
path = "src/main.rs"

[dependencies]
surf-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glob = "0.3.3"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2"
predicates = "3"
